# lmax-trading-system

./: .gitignore  Cargo.toml  README.md  config.toml
src/: main.rs
src/core/: config.rs  errors.rs  logging.rs  metrics.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: bar.rs  market.rs  mod.rs  order.rs  trade.rs
src/domain/events/: market.rs  trading.rs
src/domain/services/: bar_aggregator.rs  journal_service.rs  mod.rs  order_service.rs
src/domain/services/position/: mod.rs  tracker.rs
src/domain/services/risk/: basic.rs  mod.rs
src/domain/services/strategies/: breakout.rs  mod.rs
src/engine/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/disruptor/: consumer.rs  mod.rs  producer.rs  ring_buffer.rs
src/infrastructure/execution/: mod.rs  paper.rs
src/infrastructure/feed/: binance.rs  ib.rs  mod.rs  mt5.rs
